[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonfigures"
version = "0.0.1"
dependencies = [
    "numpy",
    "pandas",
    "sqlalchemy>=2.0",
    "sqlalchemy-utils",
    "mysqlclient",
    "scikit-learn",
    "mat73",
    "plotly",
    "jupyterlab",
    "notebook",
    "pymanopt",
    "matplotlib"
    "kaleido"
]

[tool.setuptools]
py-modules = []
